<resources>
    <string name="app_name">Dr.Speech</string>
    <string name="tap_to_speak">tap to speak</string>
    <string name="say_text">Say Text</string>
    <string name="volume">Volume</string>
    <string name="pitch">Pitch</string>
    <string name="write_here">Write Here…</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="speed">Speed</string>

</resources>
