<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#AE1E1E"
    android:foregroundTint="#F44336"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:id="@+id/ConstraintLayout">


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_en"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:foregroundTint="#E91E63"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/radio_fr"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:foregroundTint="#E91E63"
            android:text="@string/french" />
    </RadioGroup>




    <EditText
        android:id="@+id/edit_text"
        android:layout_width="352dp"
        android:layout_height="116dp"
        android:layout_marginTop="4dp"
        android:autofillHints="write here"
        android:backgroundTint="#131313"
        android:ems="10"
        android:hint="@string/write_here"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:singleLine="false"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/edit_pitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="460dp"
        android:hint="@string/pitch"
        android:textColor="#1E1E1E"
        android:textColorHint="#78909C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seek_bar_pitch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="460dp"
        android:progress="50"
        android:progressTint="#353131"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="508dp"
        android:hint="@string/speed"
        android:textColorHint="#78909C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seek_bar_speed"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="508dp"
        android:backgroundTint="#151313"
        android:foregroundTint="#121010"
        android:progress="50"
        android:progressTint="#141717"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="564dp"
        android:hint="@string/volume"
        android:textColor="#100F0F"
        android:textColorHint="#78909C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seek_bar_volume"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="568dp"
        android:backgroundTint="#151313"
        android:foregroundTint="#121010"
        android:progress="50"
        android:progressTint="#141717"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_speak"
        android:layout_width="391dp"
        android:layout_height="52dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="13dp"
        android:layout_marginTop="624dp"
        android:layout_marginEnd="13dp"
        android:background="#E91E63"
        android:enabled="false"
        android:text="@string/say_text"
        android:textAlignment="center"
        android:textColor="#131313"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="596dp"
        android:text="@string/tap_to_speak"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>